@@ -68,6 +68,8 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
       instead of assuming that every page has the SEE ALSO section.
     - Explicitly mention that Dpkg::Checksums::add_from_file() is used to
       verify digests too. Prompted by Johannes Schauer <josch@debian.org>.
+    - Document the behavior for consecutive calls to Dpkg perl module parse()
+      methods. Prompted by Johannes Schauer <josch@debian.org>.
   * Build system:
     - Add support for profiling perl modules.
     - Clean up compiler and linker automatic flag usage in configure.
